replaces from sla bool to tags in projects
